hid the ops when sorting is active. Fixed toggle spacing between hover and click events as to prevent a slight jitter

--- a/dev/scss/base/_ops.scss
+++ b/dev/scss/base/_ops.scss
@@ -5,6 +5,13 @@
 
 .is-escort-admin {
 
+  &.escort-sorting {
+
+    .escort-ops {
+      display: none !important;
+    }
+  }
+
   .escort-top-left,
   .escort-bottom-left,
   .escort-mini-left {
