--- a/dev/scss/components/item/_item_horizontal.scss
+++ b/dev/scss/components/item/_item_horizontal.scss
@@ -14,7 +14,7 @@
       padding: 0;
     }
 
-    &.has-icon:not(.escort-add):not(.escort-toggle) { // sass-lint:disable-line force-pseudo-nesting
+    &.has-icon:not(.escort-add) { // sass-lint:disable-line force-pseudo-nesting
 
       .escort-content {
         margin-left: $margin / 2;
